# Sparkle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  params.json
libraries/api/: blockchain_api.json  wallet_api.json
libraries/blockchain/: block.cpp  chain_database.cpp  pending_chain_state.cpp
libraries/blockchain/include/bts/blockchain/: block.hpp  chain_database.hpp  chain_database_impl.hpp  chain_interface.hpp  config.hpp  pending_chain_state.hpp  transaction.hpp
libraries/cli/: pretty.cpp
libraries/client/: blockchain_api.cpp  client.cpp  general_api.cpp  wallet_api.cpp
libraries/client/include/bts/client/: client.hpp  client_impl.hpp
libraries/net/include/bts/net/: config.hpp
libraries/wallet/: wallet.cpp
libraries/wallet/include/bts/wallet/: wallet.hpp
programs/client/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  dev_fixture.hpp  dev_tests.cpp  test_genesis.json
